--- a/app/views/layouts/maps.html.erb
+++ b/app/views/layouts/maps.html.erb
@@ -5,8 +5,8 @@
   <title><%= content_for?(:title) ? yield(:title) : "Notes Around" %></title>
   <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Notes Around" %>">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'http://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyCs0Rb_qa6ZC98r1EGFCmAJogZnY74lqH8' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>  
+  <%= javascript_include_tag 'https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyCs0Rb_qa6ZC98r1EGFCmAJogZnY74lqH8' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
